labels working visibility issues remaining

--- a/index.css
+++ b/index.css
@@ -12,7 +12,153 @@
  stroke: #3d5142;
  position: relative;
  z-index: -1;
+ opacity: 0;
+}
+.label{
+  opacity: 0;
 }
 body {
  background-color: #dce5d3 ;
+}
+
+.g1:hover{
+  opacity: 1;
+}
+.g2:hover{
+   opacity: 1;
+}
+.g3:hover{
+ opacity: 1;
+}
+.g4:hover{
+  opacity: 1;
+}
+.g5:hover{
+  opacity: 1;
+}
+.g6:hover{
+  opacity: 1;
+}
+.g7:hover{
+  opacity: 1;
+}
+.g8:hover{
+  opacity: 1;
+}
+.g9:hover{
+  opacity: 1;
+}
+.g10:hover{
+  opacity: 1;
+}
+.g11:hover{
+  opacity: 1;
+}
+.g12:hover{
+  opacity: 1;
+}
+.g13:hover{
+  opacity: 1;
+}
+.g14:hover{
+  opacity: 1;
+}
+.g15:hover{
+  opacity: 1;
+}
+.g16:hover{
+  opacity: 1;
+}
+.g17:hover{
+  opacity: 1;
+}
+.g18:hover{
+  opacity: 1;
+}
+.g19:hover{
+  opacity: 1;
+}
+.g20:hover{
+  opacity: 1;
+}
+.g21:hover{
+  opacity: 1;
+}
+.g22:hover{
+  opacity: 1;
+}
+.g23:hover{
+  opacity: 1;
+}
+.g24:hover{
+  opacity: 1;
+}
+.g25:hover{
+  opacity: 1;
+}
+.g26:hover{
+  opacity: 1;
+}
+.g27:hover{
+  opacity: 1;
+}
+.g28:hover{
+  opacity: 1;
+}
+.g29:hover{
+  opacity: 1;
+}
+.g30:hover{
+  opacity: 1;
+}
+.g34:hover{
+  opacity: 1;
+}
+.g35:hover{
+  opacity: 1;
+}
+.g36:hover{
+  opacity: 1;
+}
+.g37:hover{
+  opacity: 1;
+}
+.g38:hover{
+  opacity: 1;
+}
+.g39:hover{
+  opacity: 1;
+}
+.g40:hover{
+  opacity: 1;
+}
+.g41:hover{
+  opacity: 1;
+}
+.g42:hover{
+  opacity: 1;
+}
+.g43:hover{
+  opacity: 1;
+}
+.g44:hover{
+  opacity: 1;
+}
+.g45:hover{
+  opacity: 1;
+}
+.g46:hover{
+  opacity: 1;
+}
+.g47:hover{
+  opacity: 1;
+}
+.g48:hover{
+  opacity: 1;
+}
+.g49:hover{
+  opacity: 1;
+}
+.g50:hover{
+  opacity: 1;
 }
